libs/slim/test/typecheck/fail/conversion_mismatch.shader
shader vertex {
    int foo = float(0);
    return vec4(0.0, 0.0, 0.0, 1.0);
}
